kuard-config.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-config
spec:
  containers:
  - name: test-container
    image: gcr.io/kuar-demo/kuard-amd64:blue
    imagePullPolicy: Always
    command:
    - "/kuard"
    - "$(EXTRA_PARAM)"
    volumeMounts:
    - name: config-volume
      mountPath: /config
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  volumes:
  - name: config-volume
    configMap:
      name: my-config
  restartPolicy: Never
