kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - image: grc.io/kuar-demo/kuard-amd64:blue
      name: kuard
      orts:
      - containerPort: 8080
        name: http
        protocol: TCP
