kuard-secret-ips.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-tls
spec:
  containers:
  - name: kuard-tls
    image: gcr.io/kuar-demo/kuard-amd64:blue
    imagePullPolicy: Always
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
    - name: tls-certs
      mountPath: "/tls"
      readOnly: true
  imagePullSecrets:
  - name: my-image-pull-secret
  volumes:
  - name: tls-certs
    secret:
      secretName: kuard-tls
