simple-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: simple-ingress
spec:
 rules:
  - http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: alpaca
          port:
           number: 8080
